Functions to update project config and iOrg config files partiallly written.

--- a/iorg/iorg-config.org
+++ b/iorg/iorg-config.org
@@ -1,6 +1,6 @@
 * iOrg
   :PROPERTIES:
-  :projects: nil
+  :projects: /home/tj/junk/project1 /home/tj/junk/iorgjunk
   :server-port-base: 8000
   :default-host: localhost
   :END:
